DDI-Lifecycle/3.2/model/_sources/item-types/Versionable/index.rst.txt
Versionable
-----------

Adds the attribute identifying this as a versionable object as well as the MaintainableObject. All versionable objects should provide their contextual information, the identity of their maintainable parent. The deprecated form of the URN contains all the information to identify and object and its context. A Canonical URN scoped to the Maintainable contains the ID of the Maintainable as part of its structure. To provide full contextual information use the MaintainableObject structure. The use of the Canonical URN scoped to the agency or the identification sequence alone requires the content of the MaintainableObject to provide full contextual information. All content of Versionable is considered to be administrative metadata. Note that changes to the administrative metadata does not drive a change in the version of the parent objects. See DDI 3.2 Technical Documentation: Part I for further details.

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "URN","string","1..1",""
   "Agency","string","1..1",""
   "ID","string","1..1",""
   "Version","string","1..1",""
   "UserID",":doc:`/composite-types/UserIDType/index`","0..n","Allows for the specification of identifiers other than the specified DDI identification of the object. This may be a legacy ID from DDI-C, a system specific ID such as for a database or registry, or a non-DDI unique identifier. As the identifier is specific to a system the system must be identified with the UserID structure."
   "InheritanceAction","string","0..1","The attribute ""action"" is used for inheritance situations where there is an override at the local level (within a grouped StudyUnit) which is not available for further inheritance. There are three possible values for ""action"": Add - A new identifiable object (an Identifiable, Versionable, or Maintainable element) is provided locally with a new identifier (one that is not inherited). All properties (elements and attributes contained in the object) of the object are as specified. If an object with an existing id is created, this is an error.; Update - An object is provided locally with the SAME id as the inherited object. For each type of property that is specified locally, a full set of those properties is specified for local use. These properties replace any properties of this type which were inherited. Unspecified properties are used as inherited.; Delete - An object is provided locally with the SAME id as the inherited object. All properties specified locally in this object will be deleted if their types and values match those inherited. Note that to completely delete an object at the local level, all properties of the inherited object must be listed."
   "UserAttributePair",":doc:`/composite-types/StandardKeyValuePairType/index`","0..n","A system specific user defined property of the object expressed as a key/value pair. As this is specific to an individual system the use of controlled vocabularies for the key is strongly recommended."
   "VersionResponsibility","string","0..1","Person or organization within the MaintenanceAgency responsible for the version change. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, it may be included in this notation. This is primarily intended for internal use."
   "VersionResponsibilityReference_Organization",":doc:`/item-types/Organization/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionResponsibilityReference_Individual",":doc:`/item-types/Individual/index`","0..1","Reference person or organization within the MaintenanceAgency responsible for the version change, as described in an OrganizationScheme. If it is important to retain the affiliation between and individual responsible for the version and his/her agency, a Relation should be created between the individual referenced here and his/her organization. This is primarily intended for internal use."
   "VersionRationale",":doc:`/composite-types/VersionRationaleType/index`","0..1","Textual description of the rationale/purpose for the version change and a coded value to provide an internal processing flag within and organization or system. Note that versioning can only take place on objects owned by the specified DDI Agency. If you are creating a local instance of an object from another agency for current or future modification use BasedOnObject. If the changes being made result in what you determine to be new object rather than a version of a previous object, i.e. the change is too extensive to consider it a version of the existing object, create a new object and use BasedOnObject to provide a link to the object or objects that were a basis for the new object."
   "BasedOnObject",":doc:`/composite-types/BasedOnObjectType/index`","0..1","Use when creating an object that is based on an existing object or objects that are managed by a different agency or when the new object is NOT simply a version change but you wish to maintain a reference to the object that served as a basis for the new object. BasedOnObject may contain references to any number of objects which serve as a basis for this object, a BasedOnRationalDescription of how the content of the referenced object was incorporated or altered, and a BasedOnRationalCode to allow for specific typing of the BasedOnReference according to an external controlled vocabulary."
   "VersionDate","cogsDate","0..1","Date of version using the union set BaseDateType. Duration should not be used in this field, even though allowed by the ISO format enforced by the parser."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* **Versionable**
    * :doc:`/item-types/BaseRecordLayout/index`
    * :doc:`/item-types/Category/index`
    * :doc:`/item-types/CategoryGroup/index`
    * :doc:`/item-types/CodeListGroup/index`
    * :doc:`/item-types/Concept/index`
    * :doc:`/item-types/ConceptGroup/index`
    * :doc:`/item-types/ConceptualVariable/index`
    * :doc:`/item-types/ConceptualVariableGroup/index`
    * :doc:`/item-types/ControlConstruct/index`
    * :doc:`/item-types/ControlConstructGroup/index`
    * :doc:`/item-types/DataRelationship/index`
    * :doc:`/item-types/GeneralInstruction/index`
    * :doc:`/item-types/GenerationInstruction/index`
    * :doc:`/item-types/GenericMap/index`
    * :doc:`/item-types/GeographicLocation/index`
    * :doc:`/item-types/GeographicLocationGroup/index`
    * :doc:`/item-types/GeographicStructure/index`
    * :doc:`/item-types/GeographicStructureGroup/index`
    * :doc:`/item-types/Individual/index`
    * :doc:`/item-types/Instruction/index`
    * :doc:`/item-types/InstructionGroup/index`
    * :doc:`/item-types/Instrument/index`
    * :doc:`/item-types/InstrumentGroup/index`
    * :doc:`/item-types/Maintainable/index`
    * :doc:`/item-types/ManagedDateTimeRepresentation/index`
    * :doc:`/item-types/ManagedMissingValuesRepresentation/index`
    * :doc:`/item-types/ManagedNumericRepresentation/index`
    * :doc:`/item-types/ManagedRepresentationGroup/index`
    * :doc:`/item-types/ManagedScaleRepresentation/index`
    * :doc:`/item-types/ManagedTextRepresentation/index`
    * :doc:`/item-types/Methodology/index`
    * :doc:`/item-types/NCube/index`
    * :doc:`/item-types/NCubeGroup/index`
    * :doc:`/item-types/Organization/index`
    * :doc:`/item-types/OrganizationGroup/index`
    * :doc:`/item-types/PhysicalStructure/index`
    * :doc:`/item-types/PhysicalStructureGroup/index`
    * :doc:`/item-types/ProcessingEvent/index`
    * :doc:`/item-types/ProcessingEventGroup/index`
    * :doc:`/item-types/ProcessingInstructionGroup/index`
    * :doc:`/item-types/QualityStandard/index`
    * :doc:`/item-types/QualityStatement/index`
    * :doc:`/item-types/QualityStatementGroup/index`
    * :doc:`/item-types/QuestionBlock/index`
    * :doc:`/item-types/QuestionGrid/index`
    * :doc:`/item-types/QuestionGroup/index`
    * :doc:`/item-types/QuestionItem/index`
    * :doc:`/item-types/RecordLayoutGroup/index`
    * :doc:`/item-types/Relation/index`
    * :doc:`/item-types/RepresentationMap/index`
    * :doc:`/item-types/RepresentedVariable/index`
    * :doc:`/item-types/RepresentedVariableGroup/index`
    * :doc:`/item-types/SubGroup/index`
    * :doc:`/item-types/SubUniverseClass/index`
    * :doc:`/item-types/Universe/index`
    * :doc:`/item-types/UniverseGroup/index`
    * :doc:`/item-types/Variable/index`
    * :doc:`/item-types/VariableGroup/index`
    * :doc:`/item-types/VariableStatistics/index`
    * :doc:`/item-types/Weighting/index`


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/ManagedRepresentationScheme/index`
* :doc:`/composite-types/BasedOnObjectType/index`
* :doc:`/composite-types/LinkingMapType/index`
* :doc:`/composite-types/RelationshipType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/Versionable.svg

